--- a/workTimeStyle.css
+++ b/workTimeStyle.css
@@ -6,14 +6,6 @@ tr.trTimeChecker:hover td, tr.other:hover td{
 	background-color: rgba(96, 125, 139, 0.05) !important;
 }*/
 
-tr.trTimeChecker.inProgress td.subtaskTd {
-    background-color: rgba(255, 171, 64, 0.3);
-}
-
-tr.trTimeChecker.inProgress:hover td.subtaskTd {
-    background-color: rgba(255, 171, 64, 0.3) !important;
-}
-
 tr.trTimeChecker td {
     vertical-align: middle;
 }
@@ -28,4 +20,17 @@ tr[id]:not(.future):not(.trTimeChecker):not(.other) {
 
 tr input {
 	cursor: text !important;
+}
+
+
+/*tr.trTimeChecker td, tr.trTimeChecker:hover td, tr.other td, tr.other:hover td  {
+    background-color: #fff7ec !important;
+}*/
+
+tr.trTimeChecker.inProgress td.subtaskTd {
+    background-color: rgba(255, 171, 64, 0.4) !important;
+}
+
+tr.trTimeChecker.inProgress:hover td.subtaskTd {
+    background-color: rgba(255, 171, 64, 0.4) !important;
 }
